syntax = "proto3";

package todo;

option go_package = "pkg/todo";

service TodoService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  string content = 4;
  string user_id = 6;
  bool completed = 5;
}

message CreateRequest {
  string title = 1;
  string description = 2;
  string content = 3;
  string user_id = 4;
}

message CreateResponse {
  bool success = 1;
  string message = 2;
}

message GetRequest {
  string id = 1;
  string user_id = 2;
}

message GetResponse {
  bool success = 1;
  string message = 2;
  Todo todo = 3;
}

message ListRequest {
  string user_id = 1;
}

message ListResponse {
  repeated Todo todos = 1;
}

message UpdateRequest {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  string content = 5;
  bool completed = 6;
}

message UpdateResponse {
  bool success = 1;
  string message = 2;
}

message DeleteRequest {
  string id = 1;
  string user_id = 2;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
